--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,6 @@ minima:
     instagram: namnatulco
 
 exclude: ["work", "index.html"]
-destination = "climate/posts"
+destination: "climate/posts"
 theme: minima
 markdown: kramdown
