dynamic group overview, text in German, cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,4 @@ minima:
 theme: minima
 markdown: kramdown
 category-list: [info]
+gruppenlabels: [klima, linke, bündnis, antifa, antira, queerfeminismus, räume, migration, anarchismus, radverkehr]
