Convert groups into a collection

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,5 @@ gruppenlabels: [klima, linke, bündnis, antifa, antira, queerfeminismus, räume,
 collections:
   announce:
     output: true
+  gruppen:
+    output: true
